updated frontend, made it possible to add rooms and tenants to the database (mongodb)

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -65,7 +65,9 @@
   * {
     @apply border-border outline-primary/50;
   }
+
+  html,
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground overflow-hidden;
   }
 }
